<resources>
    <string name="app_name">SpotifyWrapped2340</string>
    <string name="wrapped">WRAPPED</string>
    <string name="connect_with_spotify">Connect with Spotify</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_in_button">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="profile_text">Profile</string>
    <string name="top_album">Top Album</string>
    <string name="top_artist">Top Artist</string>
    <string name="new_password">New Password</string>
    <string name="update_information">Update Information</string>
    <string name="go_back">Go Back</string>
    <string name="waiting_for_llm_api_result">Waiting for LLM API result...</string>
    <string name="logout">Logout</string>
</resources>