<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/spotify_wrapped_login_logo"
            android:layout_gravity="center"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/signup_email"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="@string/email_hint"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edit_text_bkg"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/signup_password"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_person_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edit_text_bkg"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/confirm_password"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_reset_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edit_text_bkg"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/signup_button"
            android:text="@string/sign_up_button"
            android:backgroundTint="@color/spotifyGreen"
            app:cornerRadius="10dp"/>

    </LinearLayout>

</LinearLayout>