<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wrapped_gradient"
    android:id="@+id/wrapped">

    <jp.shts.android.storiesprogressview.StoriesProgressView
        android:id="@+id/stories"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="top"
        android:layout_marginStart="70dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artistLabel" />

    <TextView
        android:id="@+id/wrappedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/wrapped"
        android:textColor="#090808"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <jp.shts.android.storiesprogressview.StoriesProgressView-->
<!--        android:id="@+id/stories"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="3dp"-->
<!--        android:layout_gravity="top"-->
<!--        android:layout_marginTop="8dp" />-->


    <TextView
        android:id="@+id/topLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/top_album"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wrappedLabel" />

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="296dp"
        android:layout_height="268dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_corner_background"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLabel"/>

    <TextView
        android:id="@+id/trackLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="First Person Shooter"
        android:textColor="#090808"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainImage" />

    <TextView
        android:id="@+id/artistLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="00dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="Drake (ft. J. Cole)"
        android:textColor="#090808"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trackLabel" />

    <Button
        android:id="@+id/wrapped_return_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/spotifyOffGreen"
        android:text="@string/go_back"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stories"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>